# $Id: configure.in,v 1.1.1.1 2007-02-14 20:43:13 hww3 Exp $
AC_INIT(auth_apple_config.h.in)

AC_MODULE_INIT()
AC_CONFIG_HEADERS(auth_apple_config.h)

# CPPFLAGS="${CPPFLAGS} ${XML2_CFLAGS} ${XSLT_CFLAGS}"
# LDFLAGS="${LDFLAGS} ${XML2_LIBS} ${XSLT_LIBS}"

CMOD_LIBS=""
CMOD_FLAGS=""

AC_SUBST(CMOD_CFLAGS) 
AC_SUBST(CMOD_LIBS)

AC_OUTPUT(Makefile)

